--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "polymerfire": "firebase/polymerfire#~2.0.0",
     "lazy-imports": "Polymer/lazy-imports#^2.0.0",
-    "paper-button": "^2.0.0"
+    "paper-button": "^2.0.0",
+    "paper-tabs": "^2.0.0",
+    "app-route-mixin": "jorgecasar/app-route-mixin"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
