--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,11 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "polymerfire": "firebase/polymerfire#~2.0.0",
     "lazy-imports": "Polymer/lazy-imports#^2.0.0",
-    "paper-button": "^2.0.0",
-    "paper-tabs": "^2.0.0",
-    "app-route-mixin": "jorgecasar/app-route-mixin"
+    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
+    "app-route-mixin": "jorgecasar/app-route-mixin",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "iron-list": "PolymerElements/iron-list#^2.0.11",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
