--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "app-route-mixin": "jorgecasar/app-route-mixin",
     "paper-card": "PolymerElements/paper-card#^2.0.0",
     "iron-list": "PolymerElements/iron-list#^2.0.11",
-    "paper-button": "PolymerElements/paper-button#^2.0.0"
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "flip-clock": "Granze/flip-clock#^2.0.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
