--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,11 @@
   },
   "hosting": {
     "public": "build/default",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "!/__/**",
