refactor view-reto

--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "paper-input": "PolymerElements/paper-input#^2.0.3",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
-    "paper-fab": "PolymerElements/paper-fab#^2.0.0"
+    "paper-fab": "PolymerElements/paper-fab#^2.0.0",
+    "geo-location": "ebidel/geo-location#^2.0.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
