--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,9 @@
     "paper-input": "PolymerElements/paper-input#^2.0.3",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
     "paper-fab": "PolymerElements/paper-fab#^2.0.0",
-    "geo-location": "ebidel/geo-location#^2.0.1"
+    "geo-location": "ebidel/geo-location#^2.0.1",
+    "app-media": "PolymerElements/app-media#^0.8.1",
+    "paper-pulsating-progress": "Collaborne/paper-pulsating-progress#^2.0.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
